--- a/back/tasks.json
+++ b/back/tasks.json
@@ -1,154 +1,303 @@
 [
-    {
-        "id": 1,
-        "name": "Deliver Package",
-        "description": "Deliver a package from the current location to the target location.",
-        "context_descriptors": [
-            {
-                "name": "current_location_lat",
-                "type": "string"
-            },
-            {
-                "name": "current_location_lon",
-                "type": "string"
-            },
-            {
-                "name": "target_location_lat",
-                "type": "string"
-            },
-            {
-                "name": "target_location_lon",
-                "type": "string"
-            }
+  {
+    "context_descriptors": [
+      {
+        "name": "current_location_lat",
+        "type": "string"
+      },
+      {
+        "name": "current_location_lon",
+        "type": "string"
+      },
+      {
+        "name": "target_location_lat",
+        "type": "string"
+      },
+      {
+        "name": "target_location_lon",
+        "type": "string"
+      }
+    ],
+    "description": "Deliver a package from the current location to the target location.",
+    "id": 1,
+    "name": "Deliver Package",
+    "scenarios": [
+      {
+        "cbr_attributes": [
+          {
+            "name": "time_to_deliver",
+            "type": "min",
+            "weight": 1
+          },
+          {
+            "name": "price",
+            "type": "min",
+            "weight": 1
+          }
         ],
-        "scenarios": [
-            {	
-                "name": "Default",
-                "constraints": [
-                    {
-                        "name": "time_to_deliver",
-                        "operator": "less",
-                        "value": 60,
-                        "weight": 1
-                    },
-                    {
-                        "name": "price",
-                        "operator": "less",
-                        "value": 50,
-                        "weight": 1
-                    }
-                ],
-                "cbr_attributes": [
-                    {
-                        "name": "time_to_deliver",
-                        "type": "min",
-                        "weight": 1
-                    },
-                    {
-                        "name": "price",
-                        "type": "min",
-                        "weight": 1
-                    }
-                ]                        
-            },
-            {	
-                "name": "Fragile",
-                "constraints": [
-                    {
-                        "name": "time_to_deliver",
-                        "operator": "less",
-                        "value": 120,
-                        "weight": 1
-                    },
-                    {
-                        "name": "price",
-                        "operator": "less",
-                        "value": 100,
-                        "weight": 1
-                    }
-                ],
-                "cbr_attributes": [
-                    {
-                        "name": "time_to_deliver",
-                        "type": "min",
-                        "weight": 1
-                    },
-                    {
-                        "name": "price",
-                        "type": "min",
-                        "weight": 1
-                    }
-                ]                        
-            },
-            {	
-                "name": "Raining",
-                "constraints": [
-                    {
-                        "name": "time_to_deliver",
-                        "operator": "less",
-                        "value": 120,
-                        "weight": 1
-                    },
-                    {
-                        "name": "price",
-                        "operator": "less",
-                        "value": 100,
-                        "weight": 1
-                    }
-                ],
-                "cbr_attributes": [
-                    {
-                        "name": "safe_to_rain",
-                        "type": "max",
-                        "weight": 2
-                    },
-                    {
-                        "name": "time_to_deliver",
-                        "type": "min",
-                        "weight": 1
-                    },
-                    {
-                        "name": "price",
-                        "type": "min",
-                        "weight": 1
-                    }
-                ]
-            },
-            {	
-                "name": "Fragile_Raining",
-                "constraints": [
-                    {
-                        "name": "time_to_deliver",
-                        "operator": "less",
-                        "value": 60,
-                        "weight": 3
-                    },
-                    {
-                        "name": "price",
-                        "operator": "less",
-                        "value": 50,
-                        "weight": 1
-                    },
-                    {
-                        "name": "safe_to_rain",
-                        "operator": "equal",
-                        "value": 1,
-                        "weight": 4
-                    }                    
-                ],
-                "cbr_attributes": [
-                    {
-                        "name": "time_to_deliver",
-                        "type": "min",
-                        "weight": 1
-                    },
-                    {
-                        "name": "price",
-                        "type": "min",
-                        "weight": 1
-                    }
-                ]
-            }
-        ]
-    }
+        "constraints": [
+          {
+            "name": "time_to_deliver",
+            "operator": "less",
+            "value": 60,
+            "weight": 1
+          },
+          {
+            "name": "price",
+            "operator": "less",
+            "value": 50,
+            "weight": 1
+          }
+        ],
+        "name": "Default"
+      },
+      {
+        "cbr_attributes": [
+          {
+            "name": "time_to_deliver",
+            "type": "min",
+            "weight": 1
+          },
+          {
+            "name": "price",
+            "type": "min",
+            "weight": 1
+          }
+        ],
+        "constraints": [
+          {
+            "name": "time_to_deliver",
+            "operator": "less",
+            "value": 120,
+            "weight": 1
+          },
+          {
+            "name": "price",
+            "operator": "less",
+            "value": 100,
+            "weight": 1
+          }
+        ],
+        "name": "Fragile"
+      },
+      {
+        "cbr_attributes": [
+          {
+            "name": "safe_to_rain",
+            "type": "max",
+            "weight": 2
+          },
+          {
+            "name": "time_to_deliver",
+            "type": "min",
+            "weight": 1
+          },
+          {
+            "name": "price",
+            "type": "min",
+            "weight": 1
+          }
+        ],
+        "constraints": [
+          {
+            "name": "time_to_deliver",
+            "operator": "less",
+            "value": 120,
+            "weight": 1
+          },
+          {
+            "name": "price",
+            "operator": "less",
+            "value": 100,
+            "weight": 1
+          }
+        ],
+        "name": "Raining"
+      },
+      {
+        "cbr_attributes": [
+          {
+            "name": "time_to_deliver",
+            "type": "min",
+            "weight": 1
+          },
+          {
+            "name": "price",
+            "type": "min",
+            "weight": 1
+          }
+        ],
+        "constraints": [
+          {
+            "name": "time_to_deliver",
+            "operator": "less",
+            "value": 60,
+            "weight": 3
+          },
+          {
+            "name": "price",
+            "operator": "less",
+            "value": 50,
+            "weight": 1
+          },
+          {
+            "name": "safe_to_rain",
+            "operator": "equal",
+            "value": 1,
+            "weight": 4
+          }
+        ],
+        "name": "Fragile_Raining"
+      },
+      {
+        "cbr_attributes": [
+          {
+            "name": "price",
+            "type": "min",
+            "weight": "1"
+          },
+          {
+            "name": "time_to_deliver",
+            "type": "min",
+            "weight": "1"
+          }
+        ],
+        "name": "NoConstraints"
+      },
+      {
+        "cbr_attributes": [
+          {
+            "name": "price",
+            "type": "min",
+            "weight": "2"
+          },
+          {
+            "name": "time_to_deliver",
+            "type": "min",
+            "weight": "1"
+          }
+        ],
+        "name": "NoConstraintsWeightedPrice"
+      },
+      {
+        "cbr_attributes": [
+          {
+            "name": "price",
+            "type": "min",
+            "weight": "1"
+          },
+          {
+            "name": "time_to_deliver",
+            "type": "min",
+            "weight": "2"
+          }
+        ],
+        "name": "NoConstraintsWeightedTimeToDeliver"
+      },
+      {
+        "cbr_attributes": [
+          {
+            "name": "price",
+            "type": "min",
+            "weight": "1"
+          },
+          {
+            "name": "time_to_deliver",
+            "type": "max",
+            "weight": "0"
+          }
+        ],
+        "constraints": [
+          {
+            "name": "time_to_deliver",
+            "operator": "less",
+            "value": "60",
+            "weight": "1"
+          }
+        ],
+        "name": "1ConstraintBin"
+      },
+      {
+        "cbr_attributes": [
+          {
+            "name": "price",
+            "type": "min",
+            "weight": "1"
+          },
+          {
+            "name": "time_to_deliver",
+            "type": "min",
+            "weight": "2"
+          }
+        ],
+        "constraints": [
+          {
+            "name": "time_to_deliver",
+            "operator": "less",
+            "value": "60",
+            "weight": "1"
+          }
+        ],
+        "name": "1ConstraintLikert"
+      },
+      {
+        "cbr_attributes": [
+          {
+            "name": "price",
+            "type": "min",
+            "weight": "1"
+          },
+          {
+            "name": "time_to_deliver",
+            "type": "min",
+            "weight": "1"
+          }
+        ],
+        "constraints": [
+          {
+            "name": "time_to_deliver",
+            "operator": "less",
+            "value": "60",
+            "weight": "1"
+          },
+          {
+            "name": "price",
+            "operator": "less",
+            "value": "100",
+            "weight": "1"
+          }
+        ],
+        "name": "2ConstraintsBin"
+      },
+      {
+        "cbr_attributes": [
+          {
+            "name": "price",
+            "type": "min",
+            "weight": "1"
+          },
+          {
+            "name": "time_to_deliver",
+            "type": "min",
+            "weight": "2"
+          }
+        ],
+        "constraints": [
+          {
+            "name": "time_to_deliver",
+            "operator": "less",
+            "value": "60",
+            "weight": "2"
+          },
+          {
+            "name": "price",
+            "operator": "less",
+            "value": "100",
+            "weight": "1"
+          }
+        ],
+        "name": "2ConstraintsLikert"
+      }
+    ]
+  }
 ]
