--- a/back/requirements.txt
+++ b/back/requirements.txt
@@ -7,6 +7,7 @@ colorlog==6.9.0
 et_xmlfile==2.0.0
 Flask==3.0.3
 Flask-Cors==5.0.0
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.4
@@ -14,6 +15,7 @@ logging==0.4.9.6
 MarkupSafe==3.0.2
 numpy==2.1.3
 openpyxl==3.1.5
+packaging==24.2
 pandas==2.2.3
 python-dateutil==2.9.0.post0
 pytz==2024.2
